--- a/packer/supabase/supabase.subdomain.conf
+++ b/packer/supabase/supabase.subdomain.conf
@@ -2,7 +2,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    server_name supabase.*;
+    server_name spb.*;
 
     include /config/nginx/ssl.conf;
 
